Fixed alignment issue with icon and bullet separator

--- a/src/sass/utils/typography.scss
+++ b/src/sass/utils/typography.scss
@@ -242,9 +242,7 @@ $fontSizes: 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 22, 24, 26;
 
 .separator-bullet {
     display: inline-block;
-    .v-icon {
-        font-size: 0.5rem !important;
-    }
+    font-size: 20px;
 }
 
 
